--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>示例noob</title>
-    </head>
-    <body>
-        <h1>welcome to my website</h1>
-    </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>myvue</title><link href=/static/css/app.8c57e96eff5fa465ca5ac0389ed1f99d.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.997dd76f82951516a3d7.js></script><script type=text/javascript src=/static/js/app.6d5a0d1c9511abe56d79.js></script></body></html>
